fixed alignment on profile page

--- a/src/pages/User/EditableProfile/EditableProfile.css
+++ b/src/pages/User/EditableProfile/EditableProfile.css
@@ -1,10 +1,13 @@
+.profile-page {
+  flex-grow: 1;
+  display: flex;
+}
+
 .editable-profile-container {
   font-family: Arial, sans-serif;
   padding: 20px;
   background-color: #f9f9f9;
   flex-grow: 1;
-  display: flex;
-  flex-direction: column;
 }
 
 .editable-profile-form {
